# oz_django_sup

./: .gitignore  manage.py  pyproject.toml  services.py
.github/workflows/: ci.yml
article/: models.py  tests.py  views.py
article/migrations/: 0001_initial.py
oz_django_sup/: asgi.py  settings.py  urls.py  wsgi.py
